# swagger/v1/swagger.yaml
@@ -4,6 +4,95 @@ info:
   title: API V1
   version: v1
 paths:
+  "/posts":
+    get:
+      summary: list posts
+      tags:
+      - Public
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: create post
+      tags:
+      - Admin
+      parameters: []
+      responses:
+        '201':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                body:
+                  type: string
+                category_id:
+                  type: number
+              required:
+              - title
+              - body
+  "/posts/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show post
+      tags:
+      - Public
+      responses:
+        '200':
+          description: successful
+    patch:
+      summary: update post
+      tags:
+      - Admin
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              required:
+              - name
+    put:
+      summary: update post
+      tags:
+      - Admin
+      parameters: []
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+              required:
+              - name
+    delete:
+      summary: delete post
+      tags:
+      - Admin
+      responses:
+        '204':
+          description: successful
   "/tags":
     get:
       summary: list tags
